fix dark mode icons size

--- a/templates/app/assets/stylesheets/chaltron.scss
+++ b/templates/app/assets/stylesheets/chaltron.scss
@@ -20,3 +20,8 @@
     border-top-right-radius: 0;
   }
 }
+
+#chaltron-theme-icon {
+  display: inline-block;
+  width: 25px;
+}
